k8s/google-cloud-armor-testing/armor-testing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  armor-testing
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-site
  namespace: armor-testing
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: test-site
            servicePort: http

---
apiVersion: v1
kind: Service
metadata:
  namespace: armor-testing
  name: test-site
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http":"cdn-armor"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: test-site
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-site
  namespace: armor-testing
spec:
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                      - test-site
      volumes:
      - name: config
        configMap:
          name: test-site-config
      - name: test-sites
        configMap:
          name: test-site
      containers:
      - name: openresty
        image: openresty/openresty:1.15.8.2-1-alpine
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: config
          subPath: nginx.conf
          mountPath: /usr/local/openresty/nginx/conf/nginx.conf
          readOnly: true
        - name: test-sites
          mountPath: /etc/nginx/conf.d/
          readOnly: true
        resources:
          limits:
            cpu: 1000m
            memory: 1G
          requests:
            cpu: 100m
            memory: 1G
